--- a/produkte.html
+++ b/produkte.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9677205099909782"
-     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -52,12 +50,14 @@
                 <div class="slide flex">
                   <div class="slide-image1 slider-link next"><img src="images/phone.png"></div>
                   <div class="slide-content">                   
-                    <div class="slide-text">Eine Schritt für Schritt Vorführung meiner Arbeitshelfer App. <br>
+                    <div class="slide-text">2023 entwickelt, Eine funktionale App, die bereit für den Einsatz ist, aber noch Feinschliff und Optimierungen braucht, 
+                      um ihr volles Potenzial zu entfalten.
+                      Hier gehts erstmal zur Schritt für Schritt Vorführung meiner Arbeitshelfer App. <br>
                       Die App hat 2 Hauptfunktionen: <br>
             1.	Man muss sich vorstellen, man kommt in ein neues Büro rein und dort bekommt man ein Ordner mit Schrittweise Arbeits-Anleitungen und dazu Fotos übergeben, 
             damit man deutlich leichter eingelernt werden kann. Nun kommt der nächste Schritt, wo man sich diesen Ordner als App vorstellen muss! <br>
             Je nach Abteilung und Bereich kann man die Arbeitsanweisungen (z.B. Lagerbewegungen über SAP) lesen und Schritt für Schritt nachmachen, 
-            bis man sie auswendig kann. Basiert auf eine Webseite, und kann daher vom Besitzer des Quellcodes und Servers sehr leicht aktualisiert werden, 
+            bis man sie auswendig kann. Da die App auf eine Webseite basiert, kann sie sehr leicht aktualisiert werden, 
             und die Aktualisierung kommt beim Nutzer automatisch ohne Zutun an, sobald der Nutzer Internet oder Intranet Zugang hat. <br>
             2.	Man kann sich in eigenen Worten eigene Notizen zur Unterstützung erstellen. Die Notizen dann über Suchverzeichnis suchen, abändern, löschen oder per Back-up absichern.
             Das erleichtert das Einlernen, führt zu weniger Verzögerungen und Fehler, und ist auch eine Hilfe für Menschen die allgemein weiterkommen wollen. <br>
