--- a/übermich.html
+++ b/übermich.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9677205099909782"
-     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -40,18 +38,17 @@
       </div>
       <div class="about"><h1>Über mich</h1>
         <h2 style="word-spacing: normal;">Ich habe einen Traum: Dass die Würde, Freiheit und individuelle Entfaltungsmöglichkeit des Einzelnen das höchste Gut auf Erden sein wird. 
-        Ich bin zu 100% open mindet! Links, Rechts, und alle ähnlichen Begriffe passen zu mir nicht. Bin hochsensibel, sehr feinfühlig und deshalb auch sehr zurückgezogen.
+        Ich bin zu 100% open mindet! Links, Rechts, und alle ähnlichen Begriffe passen zu mir nicht. Bin sehr empathisch, feinfühlig und tiefgründig und deshalb auch etwas zurückgezogen.
         Wichtige Sachen versuche ich aus der 360grad Perspektive zu analysieren. Und wenn ich denke, das Unrecht sei zu groß, gehe ich manchmal auch alleine dagegen an. 
         Hier ein Interview der Stuttgarter Zeitung über mich:</h2>  
         <br>
         <div><a href="https://www.stuttgarter-nachrichten.de/inhalt.ungewoehnliche-plakataktion-in-stuttgart-ich-will-die-politiker-wachruetteln.f4c232dc-ec93-416e-aa29-cc5214b77d47.html"> 
         <img src="aktion.png" class="image"></a>
-        <h3 style="letter-spacing: 0.6px;" > Aufgrund meines ganz speziellen, einzigartigen Charakter, habe ich schon als kleines Kind enorme Schwierigkeiten 
-          in dieser Welt gehabt. Deshalb war und bin ich eigentlich auch sehr zurückgezogen. 
-          Da ich doch aufgrund meines natürlichen Verlangen nach Verpflegung, einer Bleibe und andere Grundbedürfnisse gezwungen war
-          mit der Außenwelt zu interagieren, lernte ich sehr früh auf was für Probleme man stoßen kann. Und das Problem der immer schlimmer werdenden Wohnungsnot, 
+        <h3 style="letter-spacing: 0.6px;" > Aufgrund meines ganz speziellen, einzigartigen Charakter, habe ich schon als kleines Kind Schwierigkeiten 
+          mit den harten Bedingunen dieser Welt gehabt. Deshalb war und bin ich eigentlich auch etwas zurückgezogen. 
+          Auf meinem Lebensweg lernte ich sehr früh auf was für Probleme man stoßen kann, in Bezug auf die Grundbedürfnisse. Und das Problem der immer schlimmer werdenden Wohnungsnot, 
           ist meines Erachtens 
-          ein absolutes No-Go und ein erschreckender Ausdruck für die große Herzlosigkeit dieser Gesellschaft. Man denkt, dass nur faule, oder drogensüchtige Menschen 
+          ein absolutes No-Go und ein erschreckender Ausdruck für die große Herzlosigkeit/Empathielosigkeit dieser Gesellschaft. Man denkt, dass nur faule, oder drogensüchtige Menschen 
           in Wohnungsnot geraten.
           Das ist jedoch komplett falsch. Ich zum Beispiel bin sehr fleißig, kann 10Std am Stück sogar am Fließband durcharbeiten und bin über Jahre hinweg nie krank. 
           Das kann ich alles auch beweisen! Trotzdem habe ich und hatte ich vor allem in meiner Jugend enorme Schwierigkeiten in der Arbeitswelt.
