--- a/übermich.html
+++ b/übermich.html
@@ -37,7 +37,11 @@
           </span>
       </div>
       <div class="about"><h1>Über mich</h1>
-        <h2 style="word-spacing: normal;">Ich habe einen Traum: Dass die Würde, Freiheit und individuelle Entfaltungsmöglichkeit des Einzelnen das höchste Gut auf Erden sein wird. 
+        <h2 style="word-spacing: normal;">Mein Beispiel ist für die Gegenwart und Zukunft der Menschheit von großer Bedeutung. 
+          In einer Zeit, in der Künstliche Intelligenz viele Arbeitsplätze automatisiert, staatliche Kassen schrumpfen und Herausforderungen wachsen, 
+          ist eine ganzheitliche Ethik – also eine umfassende Philosophie und Spiritualität – unerlässlich. Ohne sie könnte KI missbraucht werden, um weite Teile der Bevölkerung zu unterdrücken. 
+          Integriert man jedoch eine allumfassende Ethik in die KI-Zukunft, können alle davon profitieren.
+          Ich habe einen Traum: Dass die Würde, Freiheit und individuelle Entfaltungsmöglichkeit des Einzelnen das höchste Gut auf Erden sein wird. 
         Ich bin zu 100% open mindet! Links, Rechts, und alle ähnlichen Begriffe passen zu mir nicht. Bin sehr empathisch, feinfühlig und tiefgründig und deshalb auch etwas zurückgezogen.
         Wichtige Sachen versuche ich aus der 360grad Perspektive zu analysieren. Und wenn ich denke, das Unrecht sei zu groß, gehe ich manchmal auch alleine dagegen an. 
         Hier ein Interview der Stuttgarter Zeitung über mich:</h2>  
