--- a/produkte.html
+++ b/produkte.html
@@ -50,7 +50,7 @@
                 <div class="slide flex">
                   <div class="slide-image1 slider-link next"><img src="images/phone.png"></div>
                   <div class="slide-content">                   
-                    <div class="slide-text">2023 entwickelt, Eine funktionale App, die bereit für den Einsatz ist, aber noch Feinschliff und Optimierungen braucht, 
+                    <div class="slide-text">2023 entwickelt. Eine funktionale App, die bereit für den Einsatz ist, aber noch Feinschliff und Optimierungen braucht, 
                       um ihr volles Potenzial zu entfalten.
                       Hier gehts erstmal zur Schritt für Schritt Vorführung meiner Arbeitshelfer App. <br>
                       Die App hat 2 Hauptfunktionen: <br>
