--- a/übermich.html
+++ b/übermich.html
@@ -29,7 +29,7 @@
             <div class="button-container">
               <ul>
                 <a href="index.html" class="neon-button">Home</a>
-                <a href="Lösung.html" class="neon-button">Lösung</a>
+                <a href="Loesung.html" class="neon-button">Lösung</a>
                 <a href="produkt.html" class="neon-button">Produkt</a>
                 <a class="active" href="übermich.html" class="neon-button">Über mich</a>
                 <a href="vita.html" class="neon-button">Vita</a> 
