--- a/Loesung.html
+++ b/Loesung.html
@@ -31,7 +31,7 @@
                 <a href="index.html" class="neon-button">Home</a>
                 <a class="active" href="Loesung.html" class="neon-button">Lösung</a>
                 <a href="produkt.html" class="neon-button">Produkt</a>
-                <a href="übermich.html" class="neon-button">Über mich</a>
+                <a href="uebermich.html" class="neon-button">Über mich</a>
                 <a href="vita.html" class="neon-button">Vita</a> 
                 </ul> 
             </div>
@@ -179,6 +179,8 @@
       sondern bei nachgewiesener Wohnungsnot auch den Anspruch auf eine sofort verfügbare, menschenwürdige Unterbringung, insbesondere in Form einer vorgefertigten Containerwohnung.
     </span>
     </p>
+    <div style="height: 0.4em;"></div>
+    <p> All Copyright © Nicola La Caprara 2024</p>
   </section>
 
 <section>
